2002-02-06  Mark McLoughlin  <mark@skynet.ie>

	* gnomecc.desktop.in: change Exec from gnomecc to
	gnome2-control-center.

2002-02-05  jacob berkman  <jacob@ximian.com>

	* gnomecc.desktop.in (Icon): 
	* capplet-dir.c (find_icon): use control-center2.png

2002-02-04  Lauris Kaplinski  <lauris@ximian.com>

	* capplet-dir-view-tree.c (populate_tree_branch): Use
	g_object unref instead of gdk_pixbuf_unref

	* capplet-dir-view-list.c (list_clean): Use g_object_unref
	(sidebar_arrow_update): g_build_filename
	(list_create): Replace deprecated methods

	* preferences.c (gnomecc_preferences_class_init): Use g_signal_new
	(read_preferences): Use g_signal_emit

	* capplet-dir.c (find_icon): Use glib methods instead of
	deprecated stuff

2002-01-21  Richard Hestilow  <hestilow@ximian.com>

	* main.c: Use nautilus as the shell if it is already running.

2002-01-17  Jakub Steiner <jimmac@ximian.com>

	* control-center.png: fix the antialiasing

2002-01-14  Bradford Hovinen  <hovinen@ximian.com>

	* Makefile.am (bin_PROGRAMS): Rename binary gnome2-control-center
	Update
	(CLEANFILES): Add this line

2002-01-09  Jean Schurger <jschurger@schurger.org>

	* capplet-dir.c (capplet_new): Check for entry->icon[0] != 0
		if (Icon =) in the desktop file.
		if entry->icon is a DIR
		If entry->icon[0] still NULL.

2002-01-03  Richard Hestilow  <hestilow@ximian.com>

	* capplet-dir.c (capplet_new): Check for ditem::icon != NULL
	before calling gnome_pixmap_file.

	* gnomecc.glade: Remove toolbar & menu stuff (this was causing
	runtime glade warnings).

2001-12-20  Bradford Hovinen  <hovinen@ximian.com>

	* capplet-dir-view-list.c: Eliminate compiler warnings

	* preferences.c: Eliminate compiler warnings

	* capplet-dir-view.c: Eliminate compiler warnings

	* capplet-dir.c: Eliminate compiler warnings

	* main.c: Eliminate compiler warnings

2001-12-19  Seth Nickell  <snickell@stanford.edu>

	* Makefile.am:
	* gnomecc.desktop.in:

	Install into $datadir/applications and add a Categories