@@ -1,3 +1,7 @@
+2002-02-08  Richard Hestilow  <hestilow@ximian.com>
+	
+	* main.c (main): Ignore nautilus if run with --use-shell.
+
 2002-02-06  Mark McLoughlin  <mark@skynet.ie>
 
 	* gnomecc.desktop.in: change Exec from gnomecc to
